# veelog

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
adif/: Cargo.toml
adif/src/: data.rs  parse.rs
db/: Cargo.toml
db/src/: data.rs  lib.rs  util.rs
resources/images/: README.md
ui/: Cargo.toml
ui/src/: lib.rs  main.rs
util/: Cargo.toml
util/src/: lib.rs
