[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
adif = { path = "../adif" }
util = { path = "../util" }
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = [ "serde" ] }
jiff = { version = "0.2.15", features = [ "serde" ] }
serde = "1.0.219"
sled = "0.34.7"
indexmap = { version = "2.10.0", features = [ "serde" ] }
